<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.sc.lesa.mediashar.config.Config"/>
        <variable
            name="config"
            type="Config" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".SettingParam"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sc.lesa.mediashar.view.MyLineLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           />

        <ScrollView
            app:layout_constraintBottom_toTopOf="@+id/setting_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_width"
               />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/editsharp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={config.width}"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_height" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/editsharp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:text="@={config.height}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_bytereat" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:background="@drawable/editsharp"
                    android:text="@={config.videoBitrate}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_fps" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:background="@drawable/editsharp"
                    android:text="@={config.videoFrameRate}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_numchannle" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:background="@drawable/editsharp"
                    android:text="@={config.channelCount}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_input_byterate" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:background="@drawable/editsharp"
                    android:text="@={config.voiceByteRate}" />


            </LinearLayout>

        </ScrollView>


        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/editsharp1"
            android:onClick="onClick"
            android:textStyle="bold"
            android:text="@string/app_but_save_setting" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
